# $Id$

2008-01-21	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotFalse().

	* main/Utils/IO/FileOutputStream.class.php: now throws IOException,
	if stream file resource does not exist.

2008-01-21	Konstantin V. Arkhipov

	* 1.0.1 released.

2008-01-16	Konstantin V. Arkhipov

	* main/DAOs/Workers/BaseDaoWorker.class.php,
	main/DAOs/Workers/NullDaoWorker.class.php: dropById() and dropByIds()
	now returns deleted rows count.

2008-01-16	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: isLesser(), isGreater(),
	isLesserOrEqual(), isGreaterOrEqual().

2008-01-10	Konstantin V. Arkhipov

	* meta/: configurations without classes are now allowed;
	includes processing now goes before classes.

2008-01-08	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: validation against
	meta.dtd implemented.

	* core/Cache/FileLocker.class.php: added forgotten file dropping in
	drop().

2008-01-07	Konstantin V. Arkhipov

	* main/DAOs/Workers/: getResult() fixed.

	* main/DAOs/Workers/VoodooDaoWorker.class.php: CacheSegmentHandler is
	the default handler now.

	* main/DAOs/Workers/CommonDaoWorker.class.php,
	main/DAOs/Workers/TransparentDaoWorker.class.php: getListByIds() now
	uses CachePeer's getList().

	* core/Cache/: getList() implemented in CachePeer and
	two memcached childs.

	* main/DAOs/Workers/NullDaoWorker.class.php: getListByIds() now
	behaves like in all others DAO workers.

	* main/Utils/ClassUtils.class.php: isClassImplements implemented, to
	avoid SPL's class_implements dependency.

2008-01-06	Konstantin V. Arkhipov

	* 1.0.0 released.

2007-12-29	Ivan Y. Khvostishkov

	* core/Form/Form.class.php: getInnerErrors() for PrimitiveForm.

2007-12-27	Vladimir A. Altuchov

	* main/Markup/Feed/: Category attribute added.

2007-12-25	Ivan Y. Khvostishkov

	* main/Net/HttpUrl.class.php: setHttpHost() - setter for Host-like
	values, as described in rfc2616, sec. 14.23.

2007-12-25	Konstantin V. Arkhipov
